--- a/mobile/src/main/res/drawable/bg_round_5.xml
+++ b/mobile/src/main/res/drawable/bg_round_5.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="@dimen/_15ssp"/>
-    <solid android:color="@color/accent"/>
+    <solid android:color="@color/pink"/>
 </shape>
