--- a/mobile/src/main/res/values/colors.xml
+++ b/mobile/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="background">#141D25</color>
     <color name="background_light">#1C2531</color>
+    <color name="progress_bg">#55F2F2F2</color>
     <color name="grey_line">#444d57</color>
     <color name="border_blue">#2563F9</color>
     <color name="pink">#D9018D</color>
